update models to include generic correct responses
