# docs/swagger.yaml
@@ -26,9 +26,26 @@ definitions:
       type:
         $ref: '#/definitions/immudb_internal_models.AccountType'
     type: object
-  internal_handlers.Response:
+  internal_handlers.Response-array_internal_handlers_AccountInfoDto:
     properties:
-      data: {}
+      data:
+        items:
+          $ref: '#/definitions/internal_handlers.AccountInfoDto'
+        type: array
+      error_message:
+        type: string
+    type: object
+  internal_handlers.Response-internal_handlers_AccountInfoDto:
+    properties:
+      data:
+        $ref: '#/definitions/internal_handlers.AccountInfoDto'
+      error_message:
+        type: string
+    type: object
+  internal_handlers.Response-string:
+    properties:
+      data:
+        type: string
       error_message:
         type: string
     type: object
@@ -71,11 +88,11 @@ paths:
         "200":
           description: List of account info
           schema:
-            $ref: '#/definitions/internal_handlers.Response'
+            $ref: '#/definitions/internal_handlers.Response-array_internal_handlers_AccountInfoDto'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/internal_handlers.Response'
+            $ref: '#/definitions/internal_handlers.Response-string'
       summary: Get all account infos
     post:
       consumes:
@@ -95,15 +112,15 @@ paths:
         "201":
           description: Created account info
           schema:
-            $ref: '#/definitions/internal_handlers.Response'
+            $ref: '#/definitions/internal_handlers.Response-internal_handlers_AccountInfoDto'
         "400":
           description: Bad request, invalid input
           schema:
-            $ref: '#/definitions/internal_handlers.Response'
+            $ref: '#/definitions/internal_handlers.Response-string'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/internal_handlers.Response'
+            $ref: '#/definitions/internal_handlers.Response-string'
       summary: Create account info
   /account-info/{id}:
     delete:
@@ -124,7 +141,7 @@ paths:
         "405":
           description: Method not allowed
           schema:
-            $ref: '#/definitions/internal_handlers.Response'
+            $ref: '#/definitions/internal_handlers.Response-string'
       summary: Delete account info
     get:
       consumes:
@@ -143,15 +160,15 @@ paths:
         "200":
           description: Account information
           schema:
-            $ref: '#/definitions/internal_handlers.Response'
+            $ref: '#/definitions/internal_handlers.Response-internal_handlers_AccountInfoDto'
         "400":
           description: Bad request, ID is required
           schema:
-            $ref: '#/definitions/internal_handlers.Response'
+            $ref: '#/definitions/internal_handlers.Response-string'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/internal_handlers.Response'
+            $ref: '#/definitions/internal_handlers.Response-string'
       summary: Get account info by ID
     put:
       consumes:
@@ -177,6 +194,6 @@ paths:
         "405":
           description: Method not allowed
           schema:
-            $ref: '#/definitions/internal_handlers.Response'
+            $ref: '#/definitions/internal_handlers.Response-string'
       summary: Update account info
 swagger: "2.0"
